# engram

./: .gitignore  README.md  pyproject.toml
engram_memory/: __init__.py
engram_memory/core/: __init__.py  interfaces.py
engram_memory/episodic/: __init__.py  memory.py  storage.py
engram_memory/semantic/: __init__.py  memory.py
engram_memory/utils/: __init__.py  embeddings.py
engram_memory/working/: __init__.py  memory.py
examples/: basic_usage.py
tests/: __init__.py  conftest.py  test_core_interfaces.py  test_embeddings.py  test_episodic_memory.py  test_integration.py  test_semantic_memory.py  test_storage.py  test_working_memory.py
